@@ -1,16 +1,25 @@
-// $Revision$
+<?php // $Revision$
 
 /************************************************************************/
 /* phpAdsNew 2                                                          */
 /* ===========                                                          */
 /*                                                                      */
-/* Copyright (c) 2001 by the phpAdsNew developers                       */
-/* http://sourceforge.net/projects/phpadsnew                            */
+/* Copyright (c) 2000-2002 by the phpAdsNew developers                  */
+/* For more information visit: http://www.phpadsnew.com                 */
 /*                                                                      */
 /* This program is free software. You can redistribute it and/or modify */
 /* it under the terms of the GNU General Public License as published by */
 /* the Free Software Foundation; either version 2 of the License.       */
 /************************************************************************/
+
+
+// Include required files
+require ("config.php");
+
+// Send content-type header
+header("Content-type: application/x-javascript");
+
+?>
 
 
 
@@ -178,9 +187,14 @@ function phpAds_formCheck(f)
 	
 	if (noerrors == false)
 	{
-		alert ('The following fields contain errors:                     \n\n- ' + 
+		alert ('<?php echo addslashes($strFieldContainsErrors) ?>' +
+			   '                     \n\n- ' + 
 			   fields.join('\n- ') + 
-			   '\n\nBefore you can continue you need to \ncorrect these errors.\n');
+			   '\n\n' +
+			   '<?php echo addslashes($strFieldFixBeforeContinue1) ?>' +
+			   '\n' +
+			   '<?php echo addslashes($strFieldFixBeforeContinue2) ?>' +
+			   '\n');
 		
 		// Select field with first error
 		f.elements[first].select();
