@@ -287,7 +287,7 @@ function phpAds_PageHeader($ID, $extra="")
 	echo "\t\t<meta name='generator' content='".$phpAds_productname." ".$phpAds_version_readable." - http://www.phpadsnew.com'>\n";
 	echo "\t\t<meta name='robots' content='noindex, nofollow'>\n\n";
 	echo "\t\t<link rel='stylesheet' href='images/".$phpAds_TextDirection."/interface.css'>\n";
-	echo "\t\t<script language='JavaScript' src='interface.js'></script>\n";
+	echo "\t\t<script language='JavaScript' src='js-gui.php'></script>\n";
 	if ($phpAds_showHelp) echo "\t\t<script language='JavaScript' src='help.js'></script>\n";
 	
 	// Show Moz site bar
